--- a/DevQuest-service/src/main/resources/static/css/admin/sidenav.css
+++ b/DevQuest-service/src/main/resources/static/css/admin/sidenav.css
@@ -7,7 +7,6 @@
   background: white;
   z-index: 1000;
   box-shadow: 2px 0 8px rgba(0,0,0,0.04);
-  padding-top: 60px;
 }
 
 .sidenav-trigger {
@@ -21,7 +20,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 4rem; /* 추가 마진 */
 }
 
 .profile-link {
@@ -31,8 +29,19 @@
 }
 
 .sidenav-title {
-  text-align: center;
-  display: block;
-  font-weight: bold;
-  font-size: 1.2rem;
+  text-align: center !important;
+  display: block !important;
+  font-size: 1.2rem !important;
+  font-weight: 600 !important;
+  padding: 0.5rem 0 !important;
+  margin-bottom: 0.5rem;
+}
+
+.sidenav .user-view .circle {
+  height: 80px;
+  width: 80px;
+  border-radius: 50%;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #e6e5e5;
 }
