--- a/DevQuest-service/src/main/resources/templates/admin/achievement-management.html
+++ b/DevQuest-service/src/main/resources/templates/admin/achievement-management.html
@@ -11,6 +11,7 @@
         rel="stylesheet">
   <link rel="stylesheet" href="/css/common.css">
   <link rel="stylesheet" href="/css/admin/header.css">
+  <link rel="stylesheet" href="/css/admin/sidenav.css">
   <link rel="stylesheet" href="/css/admin/adminDashboard.css">
 </head>
 <body>
