--- a/DevQuest-service/src/main/resources/templates/admin/company-colors.html
+++ b/DevQuest-service/src/main/resources/templates/admin/company-colors.html
@@ -12,6 +12,7 @@
   <!--css-->
   <link rel="stylesheet" href="/css/common.css">
   <link rel="stylesheet" href="/css/admin/header.css">
+  <link rel="stylesheet" href="/css/admin/sidenav.css">
   <link rel="stylesheet" href="/css/admin/adminDashboard.css">
 
 </head>
