--- a/DevQuest-service/src/main/resources/templates/admin/company-stats.html
+++ b/DevQuest-service/src/main/resources/templates/admin/company-stats.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="/css/common.css">
   <link rel="stylesheet" href="/css/header.css">
+  <link rel="stylesheet" href="/css/admin/sidenav.css">
   <link rel="stylesheet" href="/css/admin/adminDashboard.css">
 </head>
 <body>
