--- a/DevQuest-service/src/main/resources/templates/goal/goal.html
+++ b/DevQuest-service/src/main/resources/templates/goal/goal.html
@@ -88,7 +88,7 @@
               <button class="personality-option" data-personality="ESFP">ESFP</button>
               <button class="personality-option" data-personality="ENTJ">ENTJ</button>
             </div>
-            <div class="spice-options">
+            <div class="emotion-options">
               <button class="personality-option" data-personality="매운맛">매운맛</button>
               <button class="personality-option" data-personality="순한맛">순한맛</button>
             </div>
