(0618) WIP : 관리자-기업 색상관리 설정 시 일반 대시보드 목표기업 배경색으로 반영

--- a/DevQuest-service/src/main/resources/static/css/dashboard.css
+++ b/DevQuest-service/src/main/resources/static/css/dashboard.css
@@ -308,6 +308,7 @@
   justify-content: space-between;
   text-decoration: none;
   color: #5f3dc4;
+  transition: all 0.3s ease-in-out;
 }
 
 .company-card.create {
